Wed May 26 16:18:47 BST 2004  Olly Betts <olly@survex.com>

	* configure.in: Require SWIG 1.3.20 or higher.

Wed May 26 14:51:50 BST 2004  Olly Betts <olly@survex.com>

	* xapian.i: Removed bogus extra ")".

Wed May 26 04:04:06 BST 2004  Olly Betts <olly@survex.com>

	* xapian.i: Fixed the %exception handler to cover all the exceptions
	  Xapian can throw, not just a subset.

Thu May 20 15:55:36 BST 2004  Richard Boulton <richard@tartarus.org>

	* python/docs/: Add examples and documentation to dist (were being
	  installed, but not added to dist, causing make distcheck, and
	  dpkg-buildpackage, to fail).

Thu May 20 15:06:54 BST 2004  Richard Boulton <richard@tartarus.org>

	* Makefile.am: Add debian packaging files to distribution tarball.

Wed May 19 11:27:42 BST 2004  Olly Betts <olly@survex.com>

	* php4/util.i: Make sure that PHP bindings build a module which
	  exports get_module() so PHP is able to load it.

Thu May 13 17:57:50 BST 2004  Olly Betts <olly@survex.com>

	* java/native/WritableDatabase.cc,java/native/org_xapian_XapianJNI.h,
	  java/org/xapian/WritableDatabase.java,
	  java/org/xapian/XapianJNI.java: repalce -> replace.

Thu May 13 10:41:29 BST 2004  Olly Betts <olly@survex.com>

	* configure.in: Test phpize can actually be run, rather than just that
	  it's a readable file or directory.

Wed May 12 01:52:44 BST 2004  Richard Boulton <richard@tartarus.org>

        * configure.in: Revert "test -x" to "test -n", and change
          previously extant "test -x" to "test -r": test -x isn't
          portable.

Tue May 11 20:04:36 BST 2004  Richard Boulton <richard@tartarus.org>

        * configure.in: Use $PYTHON instead of python when running python
          to determine and library and include paths and version number.
          Also, change tests for non-zeroness of interpreter paths to tests
          for existence and executability of interpreter paths: this is
          relevant if configure is passed an interpreter path by the user