@@ -1,0 +1,4 @@
+## Process this file with automake to produce Makefile.in
+
+docdatadir = $(datadir)/doc/@PACKAGE@/php/examples
+docdata_DATA = simplesearch.php simpleindex.php
